# typescript-definitions

./: .gitmodules  Cargo.toml  Makefile  README.md
example/: Cargo.toml
example/src/: interface.rs  main.rs
src/: lib.rs
tests/: enums.rs  structs.rs
typescript-definitions-derive/: Cargo.toml
typescript-definitions-derive/src/: attrs.rs  derive_enum.rs  derive_struct.rs  guards.rs  lib.rs  patch.rs  tests.rs  tots.rs  typescript.rs  utils.rs
