[package]
name = "typescript-definitions-derive-ufo-patch"
version = "0.1.11"
description = "serde support for exporting Typescript definitions"
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>" , "Ian Castleden <ian.castleden@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/arabidopsis/typescript-definitions"
keywords =["typescript", "serde"]
categories = ["data-structures", "development-tools", "wasm" , "web-programming"]
edition = "2018"


[lib]
proc-macro = true
path = "src/lib.rs"


[dependencies]
quote = "0.6.11"
serde_derive_internals = "0.24.0"
syn = "0.15.26"
proc-macro2 = "0.4.27"
regex = "1.3.9"
lazy_static = "1.4.0"
thiserror = "1"
pest = "2.1.0"
pest_derive = "2.1.0"
cfg-if = "0.1.6"

[dev-dependencies]
serde = { version = "1.0.87", features = ["derive"] }
insta = "0.16.1"

[features]
export-typescript = []
test = []
type-guards = []
syn-extra-traits = ["syn/extra-traits"]
